// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalReportArgumentMobile /> should renders correcty when not show 1`] = `
<div
  aria-label="global.menu"
  aria-modal="true"
  data-dialog="true"
  hidden=""
  id="id-g"
  role="dialog"
  style="display:none"
  tabindex="-1"
/>
`;

exports[`<ModalReportArgumentMobile /> should renders correcty with argument 1`] = `
<div
  aria-label="global.menu"
  aria-modal="true"
  data-dialog="true"
  id="id-g"
  role="dialog"
  tabindex="-1"
>
  <div
    class="sc-bdnylx dCrSrw Modal__ModalContainerInner-sc-11juq2l-0"
    style="opacity:0"
  >
    <div
      class="sc-bdnylx hDMLix Modal__ModalInner-sc-11juq2l-1"
      style="opacity:0;transform:translateY(-20px) translateZ(0)"
    >
      <main
        class="sc-bdnylx Flex___StyledAppBox-ll88x1-0 gcGteT lvJOm"
      >
        <button
          aria-controls="id-g"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 cTHfeU ecJjSS"
          type="button"
        >
          global.report.submit
        </button>
        <div
          aria-label="global.report.submit"
          aria-modal="true"
          data-dialog="true"
          hidden=""
          id="id-g"
          role="dialog"
          style="display:none"
          tabindex="-1"
        />
      </main>
    </div>
  </div>
</div>
`;
